# Homelab-Ansible

./: .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  Makefile  ansible-lint.yml  ansible.cfg  pyproject.toml  secure_secrets.sh
.github/workflows/: ansible-li.yml
Ansible/inventory/: hosts.ini
Ansible/playbooks/update/: local-update.yml  proxmox-update.yml  public-update.yml
Ansible/tasks/: update.yml
System Provision/Bash Scripts/: add_cron_job.md  add_esential_users.sh  backup.py  disk-storage-relief.sh  extract_certs_from_acme.sh  intel_nic_offload.sh  shift_and_grow.sh  update-debian-version.sh
System Provision/Bash Scripts/certs/: extract_certs_from_acme.sh  internal_cert.sh
System Provision/Bash Scripts/network/: add_ssh_keys.sh  hosts.txt
System Provision/Bash Scripts/storage/: backup.py  db backup.py  extend_LVM_and_parition_size.sh  shift_and_grow.md
System Provision/Local-Services/: syncthing.service
docs/: README.md
inventory/: hosts.ini
inventory/secrets/: media.secrets.yml  traefik.secrets.yml
inventory_for_updates/: hosts.ini
playbooks/: README.md  debian_policy.yml  init_home_lab.ansible.yml
playbooks/initalize/: infrastructure.yml  init_k8_nodes.yml  public_services.yml  sens_server.yml
playbooks/initialize/: all_infrastructure.yml  all_k8.yml  infrastructure.yml  init_k8_nodes.yml  proxmox.yml  public_services.yml  sens_server.yml
playbooks/update/: enable-iscsi-tcp.yml  local-update.yml  proxmox-update.yml  public-update.yml
tasks/: change-and-gather.yml  docker-compose-up.yml
(+165 files in other folders)
