[tool.poetry]
name = "homelab"
version = "1.1.0"
description = ""
authors = ["Ezequiel Valencia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.0.0"
pyyaml = "^6.0.1"
ansible-core = "^2.18.0"
ansible-lint = {version = "^24.2.3", markers = "platform_system != 'Windows'"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
